Fix for #46, looks aligned for me, but please test on Moodle 2.6

--- a/less/essential/essential.less
+++ b/less/essential/essential.less
@@ -1402,6 +1402,10 @@ table#greyboxleft h2 {
     background: transparent;
 }
 
+.path-grade-report-grader table#fixed_column {
+    margin-top: 6px;
+}
+
 
 /* @end */
 
