--- a/style/essential-rtl.css
+++ b/style/essential-rtl.css
@@ -1348,6 +1348,10 @@ table#greyboxleft h2 {
   background: transparent;
 }
 
+.path-grade-report-grader table#fixed_column {
+  margin-top: 6px;
+}
+
 #adspots {
   margin-top: 10px;
   margin-bottom: 10px;
